#+TITLE: Guile-PNG News -- history of user-visible changes.
#+STARTUP: content hidestars

Copyright (C) Artyom V. Poptsov <poptsov.artyom@gmail.com>

  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
  notice and this notice are preserved.

* Changes in version 0.4.1 (2023-05-06)
** Bugfix: =png-image-clone= now clones image data
=png-image-clone= now produces full clone of the image data as expected.
** Bugfix: =png-chunk-clone= now clones chunks properly
Now =png-chunk-clone= creates correct copies of pHYs, tIME, tEXt, tEXT and
zTEXt chunks.
** New procedure: =png-image-filter-grayscale=
This procedure allows to convert image to grayscale colors.

* Changes in version 0.4.0 (2023-05-01)
** Bugfix: Init =position= slot of =<rectangle>= to a =<point>= instance
The =position= slot would be always initialized to a procedure instead of a
=<point>= instance.  Now this should be fixed.
** Bugfix: Setup =graphics= test suite logging properly
** Update to work with Guile-SMC 0.6.0
** =(png core chunk tEXt)=
*** New method: =png-chunk:tEXt-keyword-description=

* Changes in version 0.3.0 (2022-12-18)
** Improve the image parser
PNG chunks are now decoded properly, including data decompression.
** Improve the image encoder
Implement proper encoders for PNG chunks, including compression.
** Guile-PNG now allows to create PNG images from scratch
This also means that Guile-PNG now allows to create PNG images and draw some
graphics over them (using =(png graphics)= module.)
** =(png graphics)=: Fix line drawing algorithm
Re-implement the better version of Bresenham's line drawing algorithm based on
the GNU Octave code from
<https://www.markwrobel.dk/post/amiga-machine-code-letter12-linedraw/>
** =(png graphics)=: Add "<filled-rectangle>"
** =(png graphics)=: Add "<polygon>"
** Update the documentation
** Add new tests

* Changes in version 0.2.0 (2022-11-13)