@@ -26,17 +26,16 @@
 (define-module (png chunk-decoder)
   #:use-module (oop goops)
   #:use-module (png core chunk)
-  #:use-module (png core chunk IHDR)
-  #:use-module (png core chunk PLTE)
-  #:use-module (png core chunk IEND)
-  #:use-module (png core chunk cHRM)
-  #:use-module (png core chunk tEXt)
-  #:use-module (png core chunk tEXT)
-  #:use-module (png core chunk zTXt)
-  #:use-module (png core chunk tIME)
-  #:use-module (png core chunk iCCP)
-  #:use-module (png core chunk pHYs)
-  #:use-module (png core chunk bKGD)
+  #:use-module (png core chunk ihdr)
+  #:use-module (png core chunk plte)
+  #:use-module (png core chunk iend)
+  #:use-module (png core chunk chrm)
+  #:use-module (png core chunk text)
+  #:use-module (png core chunk ztxt)
+  #:use-module (png core chunk time)
+  #:use-module (png core chunk iccp)
+  #:use-module (png core chunk phys)
+  #:use-module (png core chunk bkgd)
   #:use-module (png image)
   #:export (png-chunk-decode))
 
