@@ -1,6 +1,6 @@
-;;; IHDR.scm -- IHDR chunk.
+;;; ihdr.scm -- IHDR chunk.
 
-;; Copyright (C) 2022 Artyom V. Poptsov <poptsov.artyom@gmail.com>
+;; Copyright (C) 2022-2023 Artyom V. Poptsov <poptsov.artyom@gmail.com>
 ;;
 ;; This program is free software: you can redistribute it and/or modify
 ;; it under the terms of the GNU General Public License as published by
@@ -23,7 +23,7 @@
 
 ;;; Code:
 
-(define-module (png core chunk IHDR)
+(define-module (png core chunk ihdr)
   #:use-module (srfi srfi-43)
   #:use-module (rnrs bytevectors)
   #:use-module (oop goops)
@@ -296,4 +296,4 @@
     #:filter-method      (png-chunk:IHDR-filter-method chunk)
     #:interlace-method   (png-chunk:IHDR-interlace-method chunk)))
 
-;;; IHDR.scm ends here.
+;;; ihdr.scm ends here.
