@@ -5,13 +5,13 @@
              (oop goops)
              (png core common)
              (png core chunk)
-             (png core chunk IHDR)
-             (png core chunk PLTE)
-             (png core chunk cHRM)
-             (png core chunk zTXt)
-             (png core chunk pHYs)
-             (png core chunk tEXt)
-             (png core chunk tIME))
+             (png core chunk ihdr)
+             (png core chunk plte)
+             (png core chunk chrm)
+             (png core chunk ztxt)
+             (png core chunk phys)
+             (png core chunk text)
+             (png core chunk time))
 
 
 (define %test-name "chunks")
